Сделан макет инженерного калькулятора.

--- a/core/src/main/res/values/dimens.xml
+++ b/core/src/main/res/values/dimens.xml
@@ -17,10 +17,23 @@
     <dimen name="main_calculator_operation_buttons_padding">6dp</dimen>
     <dimen name="main_calculator_digit_buttons_padding">4dp</dimen>
     <dimen name="main_calculator_button_maximum_text_size">100sp</dimen>
-    <dimen name="main_calculator_button_minimum_text_size">5sp</dimen>
+    <dimen name="main_calculator_button_minimum_text_size">4sp</dimen>
     <dimen name="main_calculator_buttons_text_auto_size_step_granularity">2sp</dimen>
     <dimen name="calculator_display_memory_sign_size">20sp</dimen>
     <dimen name="calculator_display_margin">8dp</dimen>
     <dimen name="input_and_result_text_auto_size_step_granularity">6dp</dimen>
     <dimen name="main_menu_clicked_item_stroke_width">1dp</dimen>
+    <dimen name="calculator_radio_group_horizontal_padding">4dp</dimen>
+
+    <dimen name="ls_menu_item_text_vertical_margin">4dp</dimen>
+    <dimen name="ls_main_calculator_horizontal_margin">18dp</dimen>
+    <dimen name="ls_calculator_menu_text_view_horizontal_padding_size">6dp</dimen>
+    <dimen name="ls_calculator_menu_item_text_size">16sp</dimen>
+    <dimen name="ls_calculator_menu_space_between_items_text">8dp</dimen>
+    <dimen name="ls_calculator_menu_items_vertical_margin">4dp</dimen>
+    <dimen name="ls_calculator_display_margin">8dp</dimen>
+    <dimen name="ls_calculator_space_between_buttons_size">8dp</dimen>
+    <dimen name="ls_calculator_space_between_buttons_half_size">4dp</dimen>
+    <dimen name="ls_calculator_display_memory_sign_size">20sp</dimen>
+    <dimen name="ls_main_calculator_operation_buttons_padding">6dp</dimen>
 </resources>
