--- a/scientific/src/main/res/layout/fragment_scientific_calculator_screen.xml
+++ b/scientific/src/main/res/layout/fragment_scientific_calculator_screen.xml
@@ -19,11 +19,11 @@
             android:id="@+id/menu_view_item_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/menu_item_text_vertical_margin"
-            android:layout_marginStart="@dimen/main_calculator_horizontal_margin"
-            android:paddingHorizontal="@dimen/calculator_menu_text_view_horizontal_padding_size"
+            android:layout_marginVertical="@dimen/ls_menu_item_text_vertical_margin"
+            android:layout_marginStart="@dimen/ls_main_calculator_horizontal_margin"
+            android:paddingHorizontal="@dimen/ls_calculator_menu_text_view_horizontal_padding_size"
             android:text="@string/calculator_menu_view_item_text"
-            android:textSize="@dimen/calculator_menu_item_text_size"
+            android:textSize="@dimen/ls_calculator_menu_item_text_size"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -32,10 +32,10 @@
             android:id="@+id/menu_edit_item_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/calculator_menu_space_between_items_text"
-            android:paddingHorizontal="@dimen/calculator_menu_text_view_horizontal_padding_size"
+            android:layout_marginStart="@dimen/ls_calculator_menu_space_between_items_text"
+            android:paddingHorizontal="@dimen/ls_calculator_menu_text_view_horizontal_padding_size"
             android:text="@string/calculator_menu_edit_item_text"
-            android:textSize="@dimen/calculator_menu_item_text_size"
+            android:textSize="@dimen/ls_calculator_menu_item_text_size"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/menu_view_item_text_view"
             app:layout_constraintStart_toEndOf="@+id/menu_view_item_text_view"
@@ -45,10 +45,10 @@
             android:id="@+id/menu_help_item_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/calculator_menu_space_between_items_text"
-            android:paddingHorizontal="@dimen/calculator_menu_text_view_horizontal_padding_size"
+            android:layout_marginStart="@dimen/ls_calculator_menu_space_between_items_text"
+            android:paddingHorizontal="@dimen/ls_calculator_menu_text_view_horizontal_padding_size"
             android:text="@string/calculator_menu_help_item_text"
-            android:textSize="@dimen/calculator_menu_item_text_size"
+            android:textSize="@dimen/ls_calculator_menu_item_text_size"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/menu_edit_item_text_view"
             app:layout_constraintStart_toEndOf="@+id/menu_edit_item_text_view"
@@ -58,7 +58,7 @@
             android:id="@+id/menu_bottom_line_view"
             android:layout_width="match_parent"
             android:layout_height="@dimen/calculator_menu_stroke_size"
-            android:layout_marginVertical="@dimen/calculator_menu_items_vertical_margin"
+            android:layout_marginVertical="@dimen/ls_calculator_menu_items_vertical_margin"
             android:background="@color/calculator_menu_stroke"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +79,7 @@
             android:id="@+id/display_screen_constraint_layout"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/ls_calculator_space_between_buttons_size"
             android:background="@drawable/main_calculator_display"
             app:layout_constraintDimensionRatio="w,1:8"
             app:layout_constraintEnd_toEndOf="@+id/button36"
@@ -90,10 +90,10 @@
                 android:id="@+id/memory_sign_text_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/calculator_display_margin"
-                android:layout_marginStart="@dimen/calculator_display_margin"
+                android:layout_marginBottom="@dimen/ls_calculator_display_margin"
+                android:layout_marginStart="@dimen/ls_calculator_display_margin"
                 android:text="@string/calculator_display_memory_sign"
-                android:textSize="@dimen/calculator_display_memory_sign_size"
+                android:textSize="@dimen/ls_calculator_display_memory_sign_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/percent_7_guideline"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -102,8 +102,8 @@
                 android:id="@+id/operation_history_text_view"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="@dimen/calculator_display_margin"
-                android:layout_marginEnd="@dimen/calculator_display_margin"
+                android:layout_marginStart="@dimen/ls_calculator_display_margin"
+                android:layout_marginEnd="@dimen/ls_calculator_display_margin"
                 android:gravity="end|bottom"
                 android:includeFontPadding="false"
                 android:maxLines="1"
@@ -119,8 +119,8 @@
                 android:id="@+id/input_and_result_text_view"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginEnd="@dimen/calculator_display_margin"
-                android:layout_marginBottom="@dimen/calculator_display_margin"
+                android:layout_marginEnd="@dimen/ls_calculator_display_margin"
+                android:layout_marginBottom="@dimen/ls_calculator_display_margin"
                 android:gravity="end|bottom"
                 android:includeFontPadding="false"
                 android:maxLength="17"
@@ -153,7 +153,7 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button27"
             style="@style/scientific_calculator_shadowed_button_style"
-            android:layout_marginVertical="@dimen/calculator_space_between_buttons_half_size"
+            android:layout_marginVertical="@dimen/ls_calculator_space_between_buttons_half_size"
             android:text="M+"
             app:layout_constraintBottom_toTopOf="@+id/button28"
             app:layout_constraintEnd_toEndOf="@+id/button28"
@@ -185,7 +185,7 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button30"
             style="@style/scientific_calculator_dark_button_style"
-            android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
+            android:layout_margin="@dimen/ls_calculator_space_between_buttons_half_size"
             android:text="*"
             app:layout_constraintBottom_toTopOf="@+id/button31"
             app:layout_constraintEnd_toStartOf="@+id/button39"
@@ -389,7 +389,7 @@
             android:id="@+id/button40"
             style="@style/scientific_calculator_base_button_style"
             android:background="@drawable/main_calculator_dark_button"
-            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
+            android:paddingVertical="@dimen/ls_main_calculator_operation_buttons_padding"
             android:text="="
             app:layout_constraintBottom_toBottomOf="@+id/button32"
             app:layout_constraintEnd_toEndOf="@+id/button39"
@@ -568,7 +568,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:paddingHorizontal="4dp"
+                android:paddingHorizontal="@dimen/calculator_radio_group_horizontal_padding"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -611,8 +611,8 @@
                     app:useMaterialThemeColors="false"
                     android:text="Грады" />
 
-
             </RadioGroup>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.appcompat.widget.AppCompatButton
