--- a/scientific/src/main/res/layout/fragment_scientific_calculator_screen.xml
+++ b/scientific/src/main/res/layout/fragment_scientific_calculator_screen.xml
@@ -368,7 +368,7 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/backspace_button"
             style="@style/scientific_calculator_dark_button_style"
-            android:text="<--"
+            android:text="/--"
             app:layout_constraintBottom_toBottomOf="@+id/ce_button"
             app:layout_constraintEnd_toEndOf="@+id/seven_button"
             app:layout_constraintStart_toStartOf="@+id/seven_button"
