--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
 
     <!-- Buttons styles-->
@@ -20,6 +20,88 @@
 
     </style>
 
+    <style name="main_calculator_base_button_style" parent="Widget.AppCompat.Button">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_marginStart">@dimen/calculator_space_between_buttons_half_size</item>
+        <item name="android:layout_marginTop">@dimen/calculator_space_between_buttons_size</item>
+        <item name="android:layout_marginEnd">@dimen/calculator_space_between_buttons_half_size</item>
+        <item name="android:layout_marginBottom">0dp</item>
+        <item name="autoSizeMaxTextSize">@dimen/main_calculator_button_maximum_text_size</item>
+        <item name="autoSizeMinTextSize">@dimen/main_calculator_button_minimum_text_size</item>
+        <item name="android:autoSizeStepGranularity" tools:targetApi="o">@dimen/main_calculator_buttons_text_auto_size_step_granularity</item>
+        <item name="autoSizeTextType">uniform</item>
+        <item name="layout_constraintDimensionRatio">w,10:8</item>
+    </style>
+
+    <style name="main_calculator_shadowed_button_style" parent="main_calculator_shadowed_edge_button_style">
+        <item name="android:layout_margin">@dimen/calculator_space_between_buttons_half_size</item>
+    </style>
+
+    <style name="main_calculator_dark_button_style" parent="main_calculator_dark_edge_button_style">
+        <item name="android:layout_margin">@dimen/calculator_space_between_buttons_half_size</item>
+    </style>
+
+    <style name="main_calculator_light_button_style" parent="main_calculator_light_edge_button_style">
+        <item name="android:layout_margin">@dimen/calculator_space_between_buttons_half_size</item>
+    </style>
+
+    <style name="main_calculator_shadowed_edge_button_style" parent="main_calculator_base_button_style">
+        <item name="android:background">@drawable/main_calculator_shadowed_button</item>
+        <item name="android:paddingVertical" tools:targetApi="o">@dimen/main_calculator_operation_buttons_padding</item>
+    </style>
+
+    <style name="main_calculator_dark_edge_button_style" parent="main_calculator_base_button_style">
+        <item name="android:background">@drawable/main_calculator_dark_button</item>
+        <item name="android:paddingVertical" tools:targetApi="o">@dimen/main_calculator_operation_buttons_padding</item>
+    </style>
+
+    <style name="main_calculator_light_edge_button_style" parent="main_calculator_base_button_style">
+        <item name="android:background">@drawable/main_calculator_light_button</item>
+        <item name="android:paddingVertical" tools:targetApi="o">@dimen/main_calculator_digit_buttons_padding</item>
+    </style>
+
+    <style name="scientific_calculator_base_button_style" parent="Widget.AppCompat.Button">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="autoSizeMaxTextSize">@dimen/main_calculator_button_maximum_text_size</item>
+        <item name="autoSizeMinTextSize">@dimen/main_calculator_button_minimum_text_size</item>
+        <item name="android:autoSizeStepGranularity" tools:targetApi="o">@dimen/main_calculator_buttons_text_auto_size_step_granularity</item>
+        <item name="android:autoSizeTextType" tools:targetApi="o">uniform</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="scientific_calculator_shadowed_button_style" parent="scientific_calculator_base_button_style">
+        <item name="android:background">@drawable/main_calculator_shadowed_button</item>
+        <item name="android:paddingVertical" tools:targetApi="o">@dimen/ls_main_calculator_operation_buttons_padding</item>
+        <item name="layout_constraintDimensionRatio">w,10:8</item>
+    </style>
+
+    <style name="scientific_calculator_dark_button_style" parent="scientific_calculator_base_button_style">
+        <item name="android:background">@drawable/main_calculator_dark_button</item>
+        <item name="android:paddingVertical" tools:targetApi="o">@dimen/ls_main_calculator_operation_buttons_padding</item>
+        <item name="layout_constraintDimensionRatio">w,10:8</item>
+    </style>
+
+    <style name="scientific_calculator_dark_button_horizontal_margin_style" parent="scientific_calculator_dark_button_style">
+        <item name="android:layout_marginHorizontal" tools:targetApi="o">@dimen/ls_calculator_space_between_buttons_half_size</item>
+    </style>
+
+    <style name="scientific_calculator_dark_button_vertical_margin_style" parent="scientific_calculator_dark_button_style">
+        <item name="android:layout_marginVertical" tools:targetApi="o">@dimen/ls_calculator_space_between_buttons_half_size</item>
+    </style>
+
+    <style name="scientific_calculator_light_button_style" parent="scientific_calculator_base_button_style">
+        <item name="android:background">@drawable/main_calculator_light_button</item>
+        <item name="android:paddingVertical" tools:targetApi="o">@dimen/ls_main_calculator_digit_buttons_padding</item>
+        <item name="layout_constraintDimensionRatio">w,10:8</item>
+    </style>
+
+    <style name="scientific_calculator_light_button_horizontal_margin_style" parent="scientific_calculator_light_button_style">
+        <item name="android:layout_marginHorizontal" tools:targetApi="o">@dimen/ls_calculator_space_between_buttons_half_size</item>
+        <item name="android:paddingVertical" tools:targetApi="o">@dimen/ls_main_calculator_digit_buttons_padding</item>
+    </style>
+
     <!-- Shape styles -->
     <style name="main_calculator_button_shape" parent="">
         <item name="cornerFamily">rounded</item>
@@ -34,6 +116,12 @@
     <style name="popUpMenuTextAppearanceLarge" parent="@android:style/TextAppearance.DeviceDefault.Widget.PopupMenu.Large">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/calculator_menu_item_text_size</item>
+    </style>
+
+    <!-- Radio buttons -->
+    <style name="calculatorRadioButtonStyle" parent="Widget.Material3.CompoundButton.RadioButton">
+        <item name="buttonTint">@color/radio_button_color</item>
+        <item name="android:textColor">@color/calculator_buttons_text_color</item>
     </style>
 
 </resources>
